# MeshSimplification

./: CMakeLCCViewerQt.inc  CMakeLists.txt  load_off.cpp  load_tetmesh.cpp
CGAL/: compiler_config.h
MeshSimplification/: edgeCollapse.cpp  edgeCollapse.hpp  edgeSelection.cpp  edgeSelection.hpp
